bugs fixed for overflow text

--- a/src/styles/studentRepre.css
+++ b/src/styles/studentRepre.css
@@ -54,8 +54,15 @@
   }
 
 .student-repre-item p {
+  height: 100px;
   margin: 0;
-  padding: 0 20px;
   font-family: "Inter", sans-serif;
   padding:10px 20px;
+    overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5; 
+  -webkit-box-orient: vertical;
+  line-height: 22px;
+
 }
